--- a/index.html
+++ b/index.html
@@ -13,39 +13,28 @@
 	</head>
 	<body>
     	<div class="container" ng-controller="MainController">
-			<h1>Hello world</h1>
-			<p>Access Token: {{ accessToken }}</p>
+			<h1>Google Analytics</h1>
 			<a class="btn btn-default" href="https://accounts.google.com/o/oauth2/auth?response_type=token&client_id=130102489011-ls4h5v0jg9il4hppjnv5no4ekmskl1g0.apps.googleusercontent.com&redirect_uri=http://www.eudes.co/google-analytics/&scope=https://www.googleapis.com/auth/analytics.readonly">Get token</a>
 			<div class="row">
-				<div class="col-sm-3">
-					<div ng-if="calendars">
-						<ul class="nav nav-pills nav-stacked">
-							<li class="{{ selectedCalendar && calendar.id == selectedCalendar.id ? 'active' : '' }}" ng-repeat="calendar in calendars"><a ng-click="selectCalendar(calendar)">{{ calendar.summary }}</a></li>
-						</ul>
-					</div>
+				<div class="col-md-3">
+					<ul class="nav nav-pills nav-stacked">
+						 <li class="{{ activeAccount && activeAccount.id == account.id ? 'active' : '' }}" ng-repeat="account in accounts"><a ng-click="getProperties(account)">{{ account.name }}</a></li>
+					</ul>
 				</div>
-				<div class="col-sm-9">
-					<div id="test">
-						
-					</div>
-					<div class="events" ng-if="events">
-						<table class="table">
-							<tr ng-repeat="event in events" class="event">
-								<td>{{ event.start.date ? event.start.date : event.start.dateTime }}</td>
-								<td>{{ event.end.date ? event.end.date : event.end.dateTime }}</td>
-								<td>{{ event.summary }}</td>
-							</tr>
-						</table>
-					</div>
+				<div class="col-md-3">
+					<ul class="nav nav-pills nav-stacked">
+						 <li class="{{ activeProperty && activeProperty.id == property.id ? 'active' : '' }}" ng-repeat="property in properties"><a ng-click="getProperty(property)">{{ property.name }}</a></li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					{{ data }}
 				</div>
 			</div>
-			
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<script src="./js/perso-angular.js"></script>
-		<script src="./js/perso-d3.js"></script>
 	</body>
 </html>
